<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="artem122ya.tomatotimer">

    <PreferenceCategory android:title="@string/timer_preference_category_title" >
        <com.ucv.settings.NumberPickerDialogPreference
            android:key="@string/work_time_minutes_preference_key"
            android:title="@string/work_minute_picker_title"
            android:defaultValue="@string/work_time_minutes_default_value"
            android:summary="@string/work_minute_picker_summary"
            custom:min_value="1"
            custom:max_value="120"/>

        <com.ucv.settings.NumberPickerDialogPreference
            android:key="@string/small_break_time_minutes_preference_key"
            android:title="@string/small_break_minute_picker_title"
            android:defaultValue="@string/small_break_time_minutes_default_value"
            android:summary="@string/small_break_minute_picker_summary"
            custom:min_value="1"
            custom:max_value="60"
            />

        <com.ucv.settings.NumberPickerDialogPreference
            android:key="@string/long_break_time_minutes_preference_key"
            android:title="@string/long_break_minute_picker_title"
            android:defaultValue="@string/long_break_time_minutes_default_value"
            android:summary="@string/long_break_minute_picker_summary"
            custom:min_value="1"
            custom:max_value="120"/>

        <com.ucv.settings.NumberPickerDialogPreference
            android:key="@string/sessions_until_long_break_preference_key"
            android:title="@string/sessions_until_long_break_title"
            android:defaultValue="@string/sessions_until_long_break_default_value"
            android:summary="@string/sessions_until_long_break_summary"
            custom:min_value="0"
            custom:max_value="10"/>
    </PreferenceCategory>
</PreferenceScreen>